@@ -99,6 +99,11 @@ GS_EXPORT_CLASS
 - (void) synchronizeFile;
 - (void) truncateFileAtOffset: (unsigned long long)pos;
 
+#if OS_API_VERSION(MAC_OS_X_VERSION_10_15, GS_API_LATEST)
+- (BOOL) truncateAtOffset: (unsigned long long)offset 
+                    error: (out NSError **)error;
+#endif
+
 @end
 
 // Notification names.
