@@ -1,3 +1,10 @@
+2024-11-08 Richard Frith-Macdonald <rfm@gnu.org>
+	
+	* Headers/Foundation/NSFileHandle.h:
+	* Source/GSFileHandle.m:
+	* Source/NSFileHandle.m:
+	Add -truncateAtOffset:error: method (issue 325)
+
 2024-11-03 Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSFileManager.m: Fix case where positive result of asking
